<resources>
    <string name="app_name">Weight Loss Buddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="stone_and_pounds">stone and lb</string>
    <string name="cm">cm</string>
    <string name="feet">ft</string>
    <string name="inch">inches</string>
    <string name="stone">stone</string>
    <string name="navigate_to_weight_tracker_screen">Go to weight tracker</string>
    <string name="date">Date</string>
    <string name="weight">Weight</string>
    <string name="total_since">Latest loss/gain</string>
    <string name="total_overall">Total loss/gain</string>
    <string name="save">Save</string>
    <string name="and">and</string>
    <string name="delete">Delete</string>
    <string name="target_weight">Target Weight</string>
    <string name="underweight">Underweight: Below 18.5</string>
    <string name="normal_weight">Normal weight: 18.5 to 24.9</string>
    <string name="overweight">Overweight: 25 to 29.9</string>
    <string name="obese">Obese: 30 to 34.9</string>
    <string name="severely_obese">Severely Obese: 35 to 40</string>
    <string name="morbidly_obese"><![CDATA[Morbidly Obese: > 40]]></string>
</resources>